--- a/s08-deploy/meal_options/gunicorn.conf
+++ b/s08-deploy/meal_options/gunicorn.conf
@@ -1,4 +1,3 @@
-
 worker_class = 'gevent'
 workers = 2
 bind = '0.0.0.0:8000'
@@ -7,4 +6,4 @@ access_logfile = '-'
 error_logfile = '-'
 log_level = 'debug'
 
-
+chdir = 'meal_options'
