--- a/s08-deploy/meal_options/Caddyfile
+++ b/s08-deploy/meal_options/Caddyfile
@@ -1,13 +1,16 @@
-http://localhost, http://127.0.0.1 {
-	tls off
-	log stdout
-	errors stdout
-	root /
-	proxy /meal-options/v1.0 http://localhost:8000 {
-		without /meal-options/v1.0
-		policy round_robin
-		# health_check /health
-		transparent
-	}
+{
+    email zj0512@gmail.com
+    admin off
 }
 
+http://:80
+{
+    handle /meal-options/v1.0/* {
+        uri strip_prefix /meal-options/v1.0/
+        reverse_proxy localhost:8000
+    }
+
+    respond * 404 {
+        close
+    }
+}
