--- a/s01-create-project/meal_options/Pipfile
+++ b/s01-create-project/meal_options/Pipfile
@@ -5,8 +5,10 @@ name = "pypi"
 
 [packages]
 flask = "*"
+pytest = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.11"
+python_full_version = "3.11.1"
