--- a/s02-add-resources/meal_options/Pipfile
+++ b/s02-add-resources/meal_options/Pipfile
@@ -5,9 +5,11 @@ name = "pypi"
 
 [packages]
 flask = "*"
+pytest = "*"
 flask-restful = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.11"
+python_full_version = "3.11.1"
