--- a/s05-add-database/meal_options/.gitignore
+++ b/s05-add-database/meal_options/.gitignore
@@ -1,8 +1,10 @@
-venv/
-*.pyc
-*.egg-info/
-dist/
-settings.cfg
-*.log*
+# Python
+__pycache__/
 
-*.db
+# Files created by this set up:
+venv/
+build/
+dist/
+*.egg-info/
+.pytest_cache/
+.mypy_cache/
