--- a/s06-add-login-auth/meal_options/Pipfile
+++ b/s06-add-login-auth/meal_options/Pipfile
@@ -11,4 +11,5 @@ flask-sqlalchemy = "*"
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.11"
+python_full_version = "3.11.1"
